--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-public/config.js
-
 # dependencies
 /node_modules
 /.pnp
@@ -12,6 +10,7 @@ public/config.js
 
 # production
 /build
+/tmp
 
 # misc
 .DS_Store
