--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "axios": "^0.19.2",
     "lodash.debounce": "^4.0.8",
     "lodash.isfunction": "^3.0.9",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-data-table-component": "^6.9.1",
     "react-dom": "^16.13.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
@@ -23,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +42,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5"
   }
 }
