--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   }
 }
